<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_top"
        android:checkableBehavior="single"
        android:menuCategory="container">
        <item
            android:id="@+id/menu_facturas"
            android:title="@string/facturas"
            android:icon="@drawable/ic_content_paste_black_24dp"/>

        <item
            android:id="@+id/menu_comandas"
            android:title="@string/comandas"
            android:icon="@drawable/food512"/>

    </group>

    <group
        android:id="@+id/group_bottom"
        android:checkableBehavior="single"
        android:menuCategory="container">
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/settings192"
            android:title="@string/settings_and_account" />

        <item
            android:id="@+id/menu_help"
            android:icon="@drawable/help192"
            android:title="@string/help_and_feedback" />
    </group>

</menu>